// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoSearch loader Basic functions module result 1`] = `
Array [
  Array [
    Object {
      "_type": "CityScape",
      "id": "1477",
      "name": "Amsterdam - Binnen de Singelgracht",
    },
  ],
]
`;

exports[`GeoSearch loader Basic functions module result 2`] = `
Array [
  Array [
    Object {
      "_type": "CityScape",
      "id": "1672",
      "name": "Amsterdam - Plan Zuid",
    },
  ],
]
`;
